depois das functional tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,4 @@ addopts =
 markers = 
     slow: Run only slow tests
     fast: Run fast tests
+    functional_test: Run tests that are selenium based
