--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             ],
             "django": true,
             "autoStartBrowser": false,
-            "justMyCode": false,
+            "justMyCode": true,
         }
     ]
 }
