--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,34 @@
 asgiref==3.8.1
-Django==4.2.13
+attrs==23.2.0
+certifi==2024.6.2
+cffi==1.16.0
+colorama==0.4.6
+coverage==7.5.3
+Django==5.0.6
+Faker==25.8.0
+h11==0.14.0
+idna==3.7
+iniconfig==2.0.0
+outcome==1.3.0.post0
+packaging==24.1
+parameterized==0.9.0
+pillow==10.3.0
+pluggy==1.5.0
+pycparser==2.22
+PySocks==1.7.1
+pytest==8.2.2
+pytest-django==4.8.0
+pytest-dotenv==0.5.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+selenium==4.21.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 sqlparse==0.5.0
+trio==0.25.1
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.1
+wsproto==1.2.0
