--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,11 @@
 PER_PAGE=9
-SECRET_KEY='CHAVE ALEATÓRIA'
+SECRET_KEY='GnlQo}NA&V-xW%<^"_s,hL/&Bw@p:WzMTqD:.}rg(mYcj*=~U)|XF}&HD*B|Phlb'
 
 # 0 = False, 1 = True
 DEBUG = 1
 
 # 0 = False, 1 = True
-SELENIUM_HEADLESS = 1
+SELENIUM_HEADLESS = 0
 
 # Database settings
 # Sqlite
